force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/gmpkg__xDataGrid_Preference__c.object-meta.xml
<CustomObject>
    <label>DataGrid Preference</label>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataGrid Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>