force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xDataGrid_Code__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDataGrid_Code__c</fullName>
    <label>DataGrid Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>