force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xDataGrid_Name__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xDataGrid_Name__c</fullName>
    <label>DataGrid Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>