force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xGridExplorerPref__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xGridExplorerPref__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grid Explorer Pref.</label>
    <type>Checkbox</type>
</CustomField>