force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xGridExplorerTemplate__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xGridExplorerTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grid Explorer Template</label>
    <type>Checkbox</type>
</CustomField>