force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xPeference_Type__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xPeference_Type__c</fullName>
    <label>Preference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Filter</fullName>
            </value>
            <value>
                <fullName>Grid Preference</fullName>
            </value>
            <value>
                <fullName>Quick Filter Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>