force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xPreference_Description__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xPreference_Description__c</fullName>
    <label>Preference Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>