force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xPreference_Target__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xPreference_Target__c</fullName>
    <label>Preference Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>