force-app/main/default/objects/gmpkg__xDataGrid_Preference__c/fields/gmpkg__xPreference_Value__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__xPreference_Value__c</fullName>
    <label>Preference Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>